@@ -1,3 +1,7 @@
+  14 Nov 2014; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
+  mona-1.4.15-r1.ebuild:
+  sci-mathematics/mona: use prune_libtool_files instead of hack
+
   05 Nov 2014; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
   mona-1.4.15-r1.ebuild:
   sci-mathematics/mona: added yacc build time dependency
